...

/* No comment provided by engineer. */
"Add" = "Add";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Background" = "Background";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Cancel" = "Cancel";

/* bluetooth */
...

/* No comment provided by engineer. */
"Continue" = "Continue";

/* No comment provided by engineer. */
"Control" = "Control";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Copy Brick" = "Copy Brick";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Delete Brick" = "Delete Brick";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Delete Loop" = "Delete Loop";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Delete Script" = "Delete Script";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Delete this Script?" = "Delete this Script?";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Done" = "Done";

/* No comment provided by engineer. */
...

/* Action sheet menu title */
"Edit Brick" = "Edit Brick";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"End If" = "End If";

/* No comment provided by engineer. */
"End of Loop" = "End of Loop";

/* No comment provided by engineer. */
...

/* Placeholder for add image-name input field */
"Enter your image name here..." = "Enter your image name here...";

/* Placeholder for list input field */
...

/* Placeholder for project-name input field */
"Enter your project name here..." = "Enter your project name here...";

/* Placeholder for add sound-name input field */
...

/* Placeholder for variable input field */
"Enter your variable name here..." = "Enter your variable name here...";

/* paint */
...

/* No comment provided by engineer. */
"for all objects" = "for all objects";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Forever" = "Forever";

/* No comment provided by engineer. */
...

/* Title of View where the user can see the frequently used bricks. */
"Frequently Used" = "Frequently Used";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"If" = "If";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"is true then" = "is true then";

/* paint */
...

/* No comment provided by engineer. */
"List type" = "List type";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Looks" = "Looks";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"More" = "More";

/* No comment provided by engineer. */
...

/* Name of the default catrobat project (used as filename!!) */
"My first project" = "My first project";

/* Default title of imported photo from camera (taken by camera) */
...

/* No comment provided by engineer. */
"New" = "New";

/* paint */
...

/* No comment provided by engineer. */
"New Project" = "New Project";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"New Variable" = "New Variable";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"OK" = "OK";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Pocket Code" = "Pocket Code";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Rename" = "Rename";

/* No comment provided by engineer. */
"Rename image" = "Rename image";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Scripts" = "Scripts";

/* bluetooth */
...

/* No comment provided by engineer. */
"Set variable" = "Set variable";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Show" = "Show";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Var/List" = "Var/List";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Variable type" = "Variable type";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"When project started" = "When project started";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"When tapped" = "When tapped";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Yes" = "Yes";

/* No comment provided by engineer. */
...
