...
{
    NSInteger width = (NSInteger)self.projectWidth;
    NSInteger height = (NSInteger)self.projectHeight;
    CGRect rect = CGRectMake(0, 0, width, height);
    
    self.drawView = [[PaintImageView alloc] initWithFrame:rect andImage:nil];
    self.drawView.accessibilityIdentifier = @"PaintCanvas";
    self.drawView.accessibilityLabel = @"Paint Canvas";
    self.view.backgroundColor = UIColor.whiteColor;
    
    self.helper = [[UIView alloc] initWithFrame:rect];

    if (self.editingImage) {
...
    [pickerView showInView:self.view];
}

- (void) updateToolbar
{
    UIBarButtonItem* action = [[UIBarButtonItem alloc] initWithImage:[UIImage imageNamed:@"ellipsis.circle"] style:UIBarButtonItemStylePlain target:self action:@selector(changeAction)];
    action.accessibilityLabel = @"tools";
    
    self.handToolBarButtonItem = [[UIBarButtonItem alloc] initWithImage:[UIImage imageNamed:@"hand.raised.fingers.spread.fill"] style:UIBarButtonItemStylePlain target:self.handTool action:@selector(changeHandToolAction)];
    self.undo = [[UIBarButtonItem alloc] initWithImage:[UIImage imageNamed:@"arrow.uturn.backward.circle"] style:UIBarButtonItemStylePlain target:self action:@selector(undoAction)];
    self.redo = [[UIBarButtonItem alloc] initWithImage:[UIImage imageNamed:@"arrow.uturn.forward.circle"] style:UIBarButtonItemStylePlain target:self action:@selector(redoAction)];
    [self.undoManager updateUndoToolBarItems];
    
...
